3.0.3:
    - RD-1979 Standardize use of resource_config instead of copying it to params
    - RD-4490 add poststart to spot fleet request
3.0.2:
    - RD-4434 Nics for Spot Fleet Requests
    - RD-2009 EC2 base properties improvement
    - Fix for EFS
    - Fix for ECS
3.0.1:
    - RD-3458 fix iam blueprint & iam status
3.0.0:
    - Moved all prepare to precreate and all create to prepare.
    - RD-3921 added resource tagging
2.14.1:
    - RD-3922: refactor _aws_resource decorator
    - RD-3922: updated natgateway create for new aws requirements
2.14.0:
    - RD-3880: Support check status for EKS
    - RD-3882: Support check status for EC2 Instances and Network
2.13.0:
    - RD-3635 Fix detach a disk.
    - Fixed security group attachment in rds.
2.12.14:
    - RD-3358: Added option to create an EC2 ami image.
2.12.13:
    - RD-3565: Fix Populate Resource issue.
2.12.12:
    - RD-3369-Return Aarch64 Wagons to Bundle
2.12.11:
    - RD-586 Timeout for CloudFormation stack creation/deletion needs to be increased (add minimum_wait_time)
2.12.10:
    - RD-3159:fixed wait for status decorator
2.12.9:
    - RD-2909: ARN policies can be added as a property at the creation of a deployment.
    - RD-2945: Subnet on delete will exit of the substring contains "NotFound", and will retry if the substring contains "DependencyViolation".
2.12.8:
    - RD-2921: Detach ENI instances on scale down from single instance.
2.12.7:
    - RD-2921: Attach ENI instances on scale to single unscaled instance.
2.12.6:
    - RD-3082: Handle multiple ec2 instances per node instance.
2.12.5:
    - RD-3070: Handle Throttled Instances
2.12.4:
    - Add tagging option for nodes create in aws.
2.12.3:
    - RD-2927: Upload local files to S3.
2.12.2:
    - Fix issue introduced in the detach ebs change.
2.12.1:
    - Support group deployment creation for 5.2.4.
    - Support passing fn arguments to detach ebs.
2.12.0:
    - Add spot fleet requests.
    - Correct image configuration notes.
2.11.1: